--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "scripts": {
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
-    "publish-stable": "git checkout master && git pull && lerna version",
-    "publish-canary": "git checkout canary && git pull && lerna version prerelease --preid canary",
+    "publish-stable": "git checkout master && git pull && yarn run utils:fix && lerna version",
+    "publish-canary": "git checkout canary && git pull && yarn run utils:fix && lerna version prerelease --preid canary",
     "publish-from-github": "./.circleci/publish.sh",
     "build": "./.circleci/build.sh",
     "lint": "eslint .",
     "codecov": "codecov",
+    "utils:fix": "yarn run utils:fix-version",
+    "utils:fix-version": "npx ts-node --project ./utils/tsconfig.json ./utils/fix-version.ts",
     "test": "jest --runInBand --verbose",
     "test-coverage": "jest --runInBand --verbose --coverage --globals \"{\\\"coverage\\\":true}\" && codecov",
     "lint-staged": "lint-staged"
